--- a/webapp/app/less/component.less
+++ b/webapp/app/less/component.less
@@ -953,9 +953,6 @@ Angular 1.2.0 Animation
 .model-design .btn-box-tool{
   font-size: 13px !important;
 }
-
-.models-main {
-  min-height: 100%;
-  background-color: #ecf0f5;
-  z-index: 800;
+.dropdown-menu a{
+  cursor: pointer;
 }
