--- a/webapp/app/partials/models/model_schema.html
+++ b/webapp/app/partials/models/model_schema.html
@@ -72,7 +72,8 @@
 <div ng-show="state.mode=='view'&&!models_treedata.length" style="margin-top:40px;">
     <div class="box box-primary">
         <div class="box-header with-border">
-            <h3 class="box-title">No model</h3>
+            <i class="fa fa-bullhorn"></i>
+            <h3 class="box-title">No models</h3>
         </div>
         <div class="box-body">
             <p>
@@ -86,6 +87,7 @@
 <div ng-show="state.mode=='view'&&!!models_treedata.length&&!model.name" style="margin-top:40px;">
     <div class="box box-primary">
         <div class="box-header with-border">
+            <i class="fa fa-bullhorn"></i>
             <h3 class="box-title">No model selected</h3>
         </div>
         <div class="box-body">
