--- a/webapp/app/partials/models/models_tree.html
+++ b/webapp/app/partials/models/models_tree.html
@@ -40,6 +40,6 @@
                 icon-collapse     = "fa fa-star-o"
                 expand-level      = "2"
                 initial-selection = "">
-            ></abn-tree>
+            </abn-tree>
     </div>
 </div>
