--- a/webapp/app/less/app.less
+++ b/webapp/app/less/app.less
@@ -365,7 +365,7 @@ pre {
 }
 
 input.ng-invalid-required {
-  border: 2px solid lightblue;
+  border: 1px solid #dd4b39;
 }
 
 input.ng-invalid-required:after {
